editor word wrap fixes

--- a/src/components/editor/Editor.module.css
+++ b/src/components/editor/Editor.module.css
@@ -151,7 +151,7 @@
     overflow-y: scroll;
     word-wrap: break-word;
     overflow-wrap: break-word;
-    word-break: break-all;
+    hyphens: auto;
     /* white-space: pre-wrap */
 }
 
